Closed
Bug 1619445
Opened 6 years ago
Closed 6 years ago
Fix ImmutableScriptFlags
Categories
(Core :: JavaScript Engine, defect, P2)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla76
| Tracking | Status | |
|---|---|---|
| firefox76 | --- | fixed |
People
(Reporter: caroline, Assigned: caroline)
References
Details
Attachments
(2 files)
- Move IsDefaultClassConstructor to MutableFlags, because it is only set once parse is done and after self-hosted.js is run.
- Split Strict into two flags, one ForceStrict as an input flag and one Strict as a parse flag.
- Split TreatAsRunOnce into multiple (potentially 3 flags) for the Parser and BCE.
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 1•6 years ago
|
||
| Assignee | ||
Comment 2•6 years ago
|
||
Depends on D65274
Comment 3•6 years ago
|
||
:caroline , patches failed to land :
"Revisions: D65274 diff 243092 ← D65275 diff 243093
Details: We're sorry, Autoland could not rebase your commits for you automatically. Please manually rebase your commits and try again.
applying /tmp/tmpLHf1Vv
js/src/vm/JSFunction.cpp
Hunk #1 FAILED at 1752.
1 out of 1 hunk FAILED -- saving rejects to file js/src/vm/JSFunction.cpp.rej
abort: patch command failed: exited with status 256"
Flags: needinfo?(ccullen)
Comment 5•6 years ago
|
||
Caroline, getting the same error:
We're sorry, Autoland could not rebase your commits for you automatically. Please manually rebase your commits and try again.
applying /tmp/tmpLVGXMD
js/src/frontend/Stencil.h
Hunk #1 FAILED at 67.
Hunk #2 FAILED at 74.
2 out of 2 hunks FAILED -- saving rejects to file js/src/frontend/Stencil.h.rej
js/src/frontend/Parser.cpp
Hunk #1 FAILED at 1677.
1 out of 2 hunks FAILED -- saving rejects to file js/src/frontend/Parser.cpp.rej
abort: patch command failed: exited with status 256
Flags: needinfo?(ccullen)
Pushed by csabou@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1a37a40dc640
Remove isDefaultClassConstructor immutable flag. r=tcampbell
https://hg.mozilla.org/integration/autoland/rev/651f6b4c7d74
Split strict flag into two distinct flags for input and parse. r=tcampbell
Comment 7•6 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/1a37a40dc640
https://hg.mozilla.org/mozilla-central/rev/651f6b4c7d74
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox76:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
| Assignee | ||
Updated•6 years ago
|
Flags: needinfo?(ccullen)
You need to log in
before you can comment on or make changes to this bug.
Description
•