Bug 1619445 - Remove isDefaultClassConstructor immutable flag. r=tcampbell

Differential Revision: https://phabricator.services.mozilla.com/D65274

--HG--
extra : moz-landing-system : lando